Add FCrepos' Catalina context to config control